--- a/media/less/style/chat/tabs.less
+++ b/media/less/style/chat/tabs.less
@@ -42,7 +42,7 @@
     }
     a {
         height: inherit;
-        color: #999;
+        color: #ff4;
         text-decoration: none;
         padding-left: 10px;
         border-bottom: none;
