room title style

--- a/media/less/style/chat/browser.less
+++ b/media/less/style/chat/browser.less
@@ -58,7 +58,9 @@
 }
 
 .lcb-rooms-list-item-name {
-    font-size: 20px;
+    color: #0f0;
+    text-decoration: bold;
+    font-size: 28px;
 }
 
 .lcb-rooms-list-item-slug, .lcb-rooms-list-item-password {
