--- a/media/less/style/chat/client.less
+++ b/media/less/style/chat/client.less
@@ -59,21 +59,21 @@
     top: 7px;
     left: 7px;
     padding: 0;
-    background-color: #c0c0c0;
+    background-color: #a0b0c0;
 }
 
 .lcb-header-logo {
-    color: #fff;
+    color: #a0b;
     font-family: Pacifico;
     font-size: 20px;
 }
 
 .lcb-sidebar {
-    background: #88f;
+    background: #28f;
     width: 200px;
     min-width: 200px;
     height: 100%;
-    border-right: 1px #333 solid;
+    border-right: 1px #321 solid;
     position: relative;
     z-index: 1;
     .flex-display;
@@ -103,12 +103,12 @@
     .transition(color .2s linear);
     &:hover,
     &:focus {
-        color: #fff;
+        color: #abd;
         cursor: pointer;
         text-decoration: none;
     }
     &:active {
-        background: #222;
+        background: #abf;
     }
 }
 
@@ -175,7 +175,7 @@
 }
 
 .lcb-status-indicator-error {
-    color: #ff7878;
+    color: #af2832;
 }
 
 .lcb-version {
