--- a/media/less/style/chat/messages.less
+++ b/media/less/style/chat/messages.less
@@ -5,7 +5,7 @@
  @messagePadding: 7px;
 
 .lcb-messages {
-    background: #fff;
+    background: #abf;
     min-width: 100%;
     max-width: 0;
     padding: 0;
@@ -33,13 +33,13 @@
         border-top: none;
     }
     &.lcb-message-own {
-        background: #fcffd8;
+        background: #af0;
     }
     &.lcb-message-mentioned {
-        background: #ffe9ee;
+        background: #afe90e;
     }
     &.lcb-message-mentioned:before {
-        background: #f22472;
+        background: #022422;
         width: 3px;
         height: 100%;
         content: '';
@@ -76,7 +76,7 @@
 }
 
 .lcb-message-name {
-    color: #666;
+    color: #163;
     font-weight: 700;
     margin-bottom: @messagePadding - 2px;
     display: block;
@@ -87,7 +87,7 @@
 }
 
 .lcb-message-time {
-    color: #bbb;
+    color: #abe;
     position: absolute;
     top: @messagePadding;
     right: @messagePadding;
@@ -98,7 +98,7 @@
     pre {
         padding: 10px;
         margin: 0;
-        border: 3px solid #cccccc;
+        border: 3px solid #acaccc;
         border-top: none;
         border-bottom: none;
         border-radius: 4px;
