--- a/media/less/style/chat/rooms.less
+++ b/media/less/style/chat/rooms.less
@@ -62,7 +62,7 @@
 .lcb-room-heading {
     font-size: 24px;
     font-weight: 300;
-    color: #555;
+    color: #157;
     line-height: inherit;
     margin: 0;
     margin-right: 5px;
@@ -91,11 +91,11 @@
 
 .lcb-room-header-actions {
     .btn-action {
-        background: #eee;
-        color: #777;
+        background: #aef;
+        color: #429;
         border-color: #ddd;
         &:hover {
-            background: #f7f7f7;
+            background: #a7f7a7;
         }
     }
 }
@@ -112,7 +112,7 @@
     background: #fff;
     height: 70px;
     min-height: 70px;
-    border-top: 1px #eee solid;
+    border-top: 1px #fae solid;
     .flex-display;
     @media (max-width: @screen-xs-max) {
         height: 42px;
@@ -143,22 +143,22 @@
         box-shadow: none !important;
     }
     &:active {
-        color: #999 !important;
+        color: #a9b !important;
     }
 }
 
 .lcb-entry-button {
     background: none;
-    color: #777;
+    color: #57a;
     border: none;
     outline: none;
     padding: 0 25px;
     border-radius: 0;
     &:hover {
-        color: #999;
+        color: #abd;
     }
     &:active {
-        color: #555;
+        color: #dfa;
     }
 }
 
@@ -175,7 +175,7 @@
 }
 
 .lcb-room-sidebar {
-    background: #f7f7f7;
+    background: #a7b7f7;
     width: 20%;
     min-width: 160px;
     max-width: 240px;
@@ -247,7 +247,7 @@
     font-size: 12px;
     padding: 5px;
     margin: 0;
-    border-bottom: 1px #eee solid;
+    border-bottom: 1px #aee solid;
     display: block;
     position: relative;
     .text-overflow;
