--- a/media/less/style/chat/uploads.less
+++ b/media/less/style/chat/uploads.less
@@ -21,7 +21,7 @@
 }
 
 .lcb-upload-item-box {
-    background: #fff;
+    background: #abf;
     border: 1px #eee solid;
     margin: 3px;
     border-radius: 3px;
@@ -39,7 +39,7 @@
 
 .lcb-upload-item-size {
     width: 100%;
-    color: #fff;
+    color: #adf;
     font-size: 12px;
     text-shadow: 0 0 5px rgba(0,0,0, 0.7);
     position: absolute;
@@ -56,5 +56,5 @@
 }
 
 .lcb-upload-item-progress-bar {
-    .progress-bar-variant(#f22472);
+    .progress-bar-variant(#a2b472);
 }
