--- a/media/less/style/login.less
+++ b/media/less/style/login.less
@@ -43,7 +43,7 @@
     margin: 0;
     margin-bottom: 30px;
     .flavour {
-        color: #f22472;
+        color: #a2d472;
     }
     @media (max-width: @screen-xs-max) {
         font-size: 56px;
@@ -51,7 +51,7 @@
 }
 
 .lcb-login-box {
-    background-color: #fff;
+    background-color: #adf;
     padding: 20px;
     border: 1px solid #e3e3e3;
     position: relative;
@@ -76,14 +76,14 @@
 
 .lcb-login-box-heading {
     line-height: 100%;
-    color: #555;
+    color: #df5;
     font-family: Pacifico;
     font-size: 24px;
     padding: 0;
     padding-bottom: 20px;
     margin: 0;
     margin-bottom: 25px;
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #d5f5a5;
 }
 
 .lcb-login-avatar {
@@ -118,7 +118,7 @@
 .lcb-login-footer {
     background-color: rgba(0,0,0,.4);
     width: 100%;
-    color: #f2f2f2;
+    color: #a2f2f2;
     font-family: Tahoma;
     font-size: 11px;
     text-align: center;
