--- a/media/less/style/base.less
+++ b/media/less/style/base.less
@@ -35,7 +35,7 @@ body {
     display: block;
     margin: 0;
     .placeHolder {
-        background-color: #eee;
+        background-color: #ade;
         height: 16px;
         line-height: 16px;
         color: #555;
