--- a/media/less/style/chat/browser.less
+++ b/media/less/style/chat/browser.less
@@ -5,7 +5,7 @@
 @roomBrowserHeader: 50px;
 
 .lcb-rooms-browser {
-    background: #fff;
+    background: #abc;
     .flex(1);
     .flex-display;
     .flex-direction(column);
@@ -34,10 +34,10 @@
     position: relative;
     padding: 10px 15px;
     margin-bottom: 5px;
-    border-bottom: 1px #f2f2f2 solid;
+    border-bottom: 1px #f2f202 solid;
     overflow: hidden;
     &:hover {
-        background: #f2f2f2;
+        background: #f2f202;
     }
 }
 
@@ -58,7 +58,7 @@
 }
 
 .lcb-rooms-list-item-name {
-    color: #0f0;
+    color: #3a0;
     text-decoration: bold;
     font-size: 28px;
 }
