--- a/media/less/style/chat/tabs.less
+++ b/media/less/style/chat/tabs.less
@@ -53,7 +53,7 @@
     &:hover {
         .opacity(.8);
         a {
-            color: #bbb;
+            color: #abb;
         }
     }
     &.selected {
@@ -62,7 +62,7 @@
             background: rgba(255, 255, 255, .9);
         }
         a {
-            color: #fff;
+            color: #afd;
         }
         .opacity(1);
     }
@@ -76,7 +76,7 @@
 
 .lcb-tab-alerts {
     background-color: #b94a48;
-    color: #fff;
+    color: #adf;
     font-weight: bold;
     font-size: 11px;
     line-height: 100%;
@@ -98,17 +98,17 @@
 }
 
 .lcb-tab-alerts-mentions {
-    background: #f22472;
+    background: #a224d2;
 }
 
 .lcb-tab-alerts-total {
-    background: #b94a48;
+    background: #affad8;
 }
 
 .lcb-tab-close {
     line-height: 32px;
     font-size: 20px;
-    color: #ccc;
+    color: #aec;
     position: absolute;
     top: 0;
     right: 8px;
